kubernetes/kustomizations/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: audiobookshelf
  name: audiobookshelf
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: web
  selector:
    app: audiobookshelf
  clusterIP: None
