kubernetes/kustomizations/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
  labels:
    dns-type: internal
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - books.zmuda.pro
      secretName: audiobookshelf-tls
  rules:
    - host: books.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  name: web
